--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
   <body>
     <section class="s1">
      <div class="main-container">
-       <h1>Hi, I'm Janak Bohra</h1>
-       <p>An UI Developer</p>
-       <a href="#">Link</a>
+       <div class="greeting-wrapper">
+         <h1>Hi, I'm Janak Bohra</h1>
+       </div>
+        <div class="intro-wrapper">
+          <div class="nav-wrapper">
+            Nav
+          </div>
+          <div class="left-column">
+            left-column
+          </div>
+          <div class="right-column">
+            right-column
+          </div>
+        </div>
+
      </div>
     </section>
     <section class="s2">
