--- a/index.html
+++ b/index.html
@@ -1,53 +1,82 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Janak Bohra</title>
-    <meta name="viewport" content="width=device-width
+
+<head>
+  <meta charset="utf-8">
+  <title>Janak Bohra</title>
+  <meta name="viewport" content="width=device-width
     inital-scale=1, maximum-scale=1, minimum=sacle=1">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Russo+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/default.css">
-  </head>
-  <body>
-    <section class="s1">
-     <div class="main-container">
-       <div class="greeting-wrapper">
-         <h1>Hi, I'm Janak Bohra</h1>
-       </div>
-        <div class="intro-wrapper">
-          <div class="nav-wrapper">
-            Nav
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Russo+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/default.css">
+</head>
+
+<body>
+  <section class="s1">
+    <div class="main-container">
+      <div class="greeting-wrapper">
+        <h1>Hi, I'm Janak Bohra</h1>
+      </div>
+      <div class="intro-wrapper">
+        <div class="nav-wrapper">
+          <div class="dots-wrapper">
+            <div class="browser-dot" id="dot-1"></div>
+            <div class="browser-dot" id="dot-2"></div>
+            <div class="browser-dot" id="dot-3"></div>
           </div>
-          <div class="left-column">
-            left-column
-          </div>
-          <div class="right-column">
-            right-column
+          <ul id="navigation">
+            <li><a href="#">Contact</a></li>
+            
+
+          </ul>
+
+        </div>
+        <div class="left-column">
+          <img src="images/janak.jpg" alt="profile photo" id="profile_pic">
+          <h5 style="text-align: center;line-height:0;">Personalize Theme</h5>
+          <div class="theme-options-wrapper">
+            <div class="theme-dot" id="light-mode">
+
+            </div>
+            <div class="theme-dot" id="blue-mode">
+
+            </div>
+            <div class="theme-dot" id="green-mode">
+
+            </div>
+            <div class="theme-dot" id="purple-mode">
+
+            </div>
+            <p>*Theme settings will be saved for<br> your next visit. </p>
           </div>
         </div>
-
-     </div>
-    </section>
-    <section class="s2">
-      <div class="main-container">
-        About
-
+        <div class="right-column">
+          right-column
+        </div>
       </div>
 
-    </section>
-    <section class="s1">
-      <div class="main-container">
-        Protfolio
+    </div>
+  </section>
+  <section class="s2">
+    <div class="main-container">
+      About
 
-      </div>
+    </div>
 
-    </section>
-    <section class="s2">
-      <div class="main-container">
-        Contact
+  </section>
+  <section class="s1">
+    <div class="main-container">
+      Protfolio
 
-      </div>
+    </div>
 
-    </section>
-  </body>
+  </section>
+  <section class="s2">
+    <div class="main-container">
+      Contact
+
+    </div>
+
+  </section>
+</body>
+
 </html>
