--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </div>
           <ul id="navigation">
             <li><a href="#">Contact</a></li>
-            
+
 
           </ul>
 
@@ -33,21 +33,14 @@
         <div class="left-column">
           <img src="images/janak.jpg" alt="profile photo" id="profile_pic">
           <h5 style="text-align: center;line-height:0;">Personalize Theme</h5>
-          <div class="theme-options-wrapper">
-            <div class="theme-dot" id="light-mode">
-
-            </div>
-            <div class="theme-dot" id="blue-mode">
-
-            </div>
-            <div class="theme-dot" id="green-mode">
-
-            </div>
-            <div class="theme-dot" id="purple-mode">
-
-            </div>
-            <p>*Theme settings will be saved for<br> your next visit. </p>
+          <div id="theme-options-wrapper">
+            <div class="theme-dot" id="light-mode"></div>
+            <div class="theme-dot" id="blue-mode"></div>
+            <div class="theme-dot" id="green-mode"></div>
+            <div class="theme-dot" id="purple-mode"></div>
           </div>
+            <p id="settings-note">*Theme settings will be saved for<br>your next visit. </p>
+
         </div>
         <div class="right-column">
           right-column
