--- a/index.html
+++ b/index.html
@@ -43,7 +43,17 @@
 
         </div>
         <div class="right-column">
-          right-column
+
+          <div id="preview-shadow">
+            <div class="" id="preview">
+            <div id="corner-tl" class="corner"></div>
+            <div id="corner-tr" class="corner"></div>
+            <h3>What I Do</h3>
+            <p>I am an UI Developer.</p>
+            <div id="corner-bl" class="corner"></div>
+            <div id="corner-br" class="corner"></div>
+          </div>
+          </div>
         </div>
       </div>
 
