About section added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section class="s1">
     <div class="main-container">
       <div class="greeting-wrapper">
-        <h1>Hi, I'm Janak Bohra</h1>
+        <h1>Hello, I'm Janak Bohra.</h1>
       </div>
       <div class="intro-wrapper">
         <div class="nav-wrapper">
@@ -39,20 +39,21 @@
             <div class="theme-dot" id="green-mode"></div>
             <div class="theme-dot" id="purple-mode"></div>
           </div>
-            <p id="settings-note">*Theme settings will be saved for<br>your next visit. </p>
+          <p id="settings-note">*Theme settings will be saved for<br>your next visit. </p>
 
         </div>
         <div class="right-column">
 
           <div id="preview-shadow">
             <div class="" id="preview">
-            <div id="corner-tl" class="corner"></div>
-            <div id="corner-tr" class="corner"></div>
-            <h3>What I Do</h3>
-            <p>I am an UI Developer.</p>
-            <div id="corner-bl" class="corner"></div>
-            <div id="corner-br" class="corner"></div>
-          </div>
+              <div id="corner-tl" class="corner"></div>
+              <div id="corner-tr" class="corner"></div>
+              <h3>Who's this guy?</h3>
+              <p>I am an UI Developer.</p>
+              <p>I have serious passion for UI effects, animations and creating intuitive, dynamic user experiences. </p>
+              <div id="corner-bl" class="corner"></div>
+              <div id="corner-br" class="corner"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -61,7 +62,45 @@
   </section>
   <section class="s2">
     <div class="main-container">
-      About
+      <div class="about-wrapper">
+        <div class="about-me">
+          <h4>
+            More about me
+          </h4>
+          <p>I build new projects just to tickle my brain and love learning about new tech.</p>
+          <p>I am also a freelancer hope to make your website great.</p>
+
+          <hr>
+          <h4>TOP EXPERTISE</h4>
+          <p>Front-end Developer developer with primary focus React + Bootstrap:
+          <a href="resume.pdf" target="_blank">Download Resume</a>
+
+          </p>
+
+          <div id="skills">
+            <ul>
+              <li>HTML5</li>
+              <li>CSS#</li>
+              <li>Javascript</li>
+              <li>React</li>
+            </ul>
+            <ul>
+              <li>Heroku</li>
+              <li>Python</li>
+              <li>Java</li>
+              <li>AWS</li>
+            </ul>
+
+          </div>
+        </div>
+        <div class="social-links">
+        <img src="images/add.png" id="social_img"  alt="LinkedIn add photo">
+        <h3>Find me on Github & LinkedIn</h3>
+        <a href="https://github.com/janak1998" target="_blank">Github: janak1998</a>
+        <br>
+        <a href="https://www.linkedin.com/in/janak-bohra/" target="_blank">LinkedIn: Janak Bohra</a>
+        </div>
+      </div>
 
     </div>
 
