changes name and folder

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <hr>
           <h4>TOP EXPERTISE</h4>
           <p>Front-end Developer developer with primary focus React + Bootstrap:
-          <a href="resume.pdf" target="_blank">Download Resume</a>
+          <a href="MISC/resume.pdf" target="_blank">Download Resume</a>
 
           </p>
 
@@ -175,7 +175,7 @@
     </div>
 
   </section>
-  <script type="text/javascript" src="script.js" ></script>
+  <script type="text/javascript" src="scripts/main.js" ></script>
 </body>
 
 </html>
