--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="browser-dot" id="dot-3"></div>
           </div>
           <ul id="navigation">
-            <li><a href="#">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
 
 
           </ul>
@@ -151,7 +151,7 @@
     </div>
 
   </section>
-  <section class="s2">
+  <section class="s2" id="contact">
     <div class="main-container">
       <h3 style="text-align:center;">Get In Touch</h3>
 
