--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div id="skills">
             <ul>
               <li>HTML5</li>
-              <li>CSS#</li>
+              <li>CSS3</li>
               <li>Javascript</li>
               <li>React</li>
             </ul>
