--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <div class="main-container">
       <h3 style="text-align:center;">Get In Touch</h3>
 
-      <form class="" id="contact-form" action="index.html" method="post">
+      <form class="" id="contact-form" action="mailto:janakbohra29@gmail.com" method="post">
 
         <label>Name</label>
         <input class="input-field" type="text" name="name">
